# ExaConstit

./: .gitignore  CMakeLists.txt  LICENSE  README.md  uncrustify.cfg
.github/: build.yml
.github/actions/build-ecmech/: action.yml
.github/workflows/: build.yml
.github/workflows/build-ecmech/: action.yml
.github/workflows/build-exaconstit/: action.yml
.github/workflows/build-hypre/: action.yml
.github/workflows/build-metis/: action.yml
.github/workflows/build-mfem/: action.yml
.github/workflows/build-raja/: action.yml
cmake/: CMakeBasics.cmake  ExaConstitOptions.cmake
cmake/thirdpartylibraries/: FindCaliper.cmake  FindConduit.cmake  FindECMech.cmake  FindMFEM.cmake  FindMetis.cmake  FindRAJA.cmake  FindSNLS.cmake  SetupThirdPartyLibraries.cmake
scripts/: ecmech_prop_file.py
scripts/install/: unix_gpu_install_example.sh  unix_install_example.sh
scripts/meshing/: CMakeLists.txt  fepx2mfem_mesh.py  mesh_generator.cpp  neper_v4_mesh.py
scripts/postprocessing/: adios2_example.py  adios2_extraction.py  calc_lattice_strain.py  exaconstit_post.py  macro_stress_strain_plot.py  strain_Xtal_to_Sample.py
src/: BCData.cpp  BCData.hpp  BCManager.cpp  BCManager.hpp  CMakeLists.txt  mechanics_coefficient.cpp  mechanics_coefficient.hpp  mechanics_driver.cpp  mechanics_ecmech.cpp  mechanics_ecmech.hpp  mechanics_integrators.cpp  mechanics_integrators.hpp  mechanics_kernels.cpp  mechanics_kernels.hpp  mechanics_log.hpp  mechanics_model.cpp  mechanics_model.hpp  mechanics_operator.cpp  mechanics_operator.hpp  mechanics_operator_ext.cpp  mechanics_operator_ext.hpp  mechanics_solver.cpp  mechanics_solver.hpp  mechanics_test.cpp  mechanics_umat.cpp  mechanics_umat.hpp  option_parser.cpp  option_parser.hpp  option_types.hpp  options.toml  system_driver.cpp  system_driver.hpp  userumat.h
src/umat_tests/: userumat.cxx  userumat.h
test/: CMakeLists.txt  grad_test.cpp  mechanics_test.cpp  test_mechanics.py  test_mechanics_const_strain_rate.py
test/data/: mtsdd_bcc.toml  mtsdd_bcc_stress.txt  mtsdd_full.toml  mtsdd_full_auto.toml  mtsdd_full_auto_stress.txt  mtsdd_full_stress.txt  props_cp_mts.txt  props_cp_mts_in625.txt  props_cp_voce.txt  props_cp_vocenl.txt  voce_bcc.toml  voce_bcc_stress.txt  voce_ea.toml  voce_ea_cs.toml  voce_ea_cs_def_grad.txt  voce_ea_cs_dp_tensor.txt  voce_ea_cs_pl_work.txt  voce_ea_cs_stress.txt  voce_ea_def_grad.txt  voce_ea_dp_tensor.txt  voce_ea_pl_work.txt  voce_ea_stress.txt  voce_full.toml  voce_full_cyclic.toml  voce_full_cyclic_cs.toml  voce_full_cyclic_csm.toml  voce_full_cyclic_csm_stress.txt  voce_full_cyclic_stress.txt  voce_full_stress.txt  voce_nl_full.toml  voce_pa.toml  voce_pa_stress.txt
workflows/: README.md
workflows/Stage3/: .gitignore
workflows/Stage3/common_simulation_files/: challenge_problem.bash  custom_dt.txt  custom_dt_fine.txt  custom_dt_fine2.txt  options_master.toml  props_cp_voce_ab_in625_RT.txt  props_cp_voce_ab_in625_T250.txt  props_cp_voce_ab_in625_T500.txt  props_cp_voce_in625.txt
workflows/Stage3/exaconstit_build/: exaconstit_install_hip.sh  make.inc
workflows/Stage3/main_simulations/: README.md  flux.sh  hip_mechanics.bash  hip_mechanics.flux  job_cli.py  options_master.toml  simulation.mesh  themis.sh  voce_full.toml
workflows/Stage3/postprocessing/: README.md  barlat_optimize.py  chal_postprocess.py  chal_ss_vals.py
workflows/Stage3/pre_main_post_script/: README  chal_prob_full.py  chal_prob_mini.py  entk_config.json  entk_plot_ru.py  entk_source  entk_wf.py  exaconstit_preprocessing_main.py  job_creation.py
workflows/Stage3/pre_main_post_script/voxel_coarsen/: Cargo.toml  README.md  pyex.py  setup.py
workflows/Stage3/pre_main_post_script/voxel_coarsen/src/: lib.rs
workflows/Stage3/pre_main_post_script/voxel_coarsen/src/coarsen/: mod.rs
workflows/Stage3/pre_main_post_script/voxel_coarsen/src/pycoarsen/: mod.rs
workflows/Stage3/pre_main_post_script/voxel_coarsen/tests/: test.rs
workflows/Stage3/preprocessing/: README.md  exaca.csv  simulation_ori.txt  (+3 more)
workflows/optimization/: ExaConstit_Logger.py  ExaConstit_MatGen.py  ExaConstit_NSGA3.py  ExaConstit_PostProcess.py  ExaConstit_Problems.py  ExaConstit_SolPicker.py  ExaPlots.py  custom_dt.txt  flux_map.py  grains.txt  master_flux.flux  master_options.toml  normal_map.py  state_cp_voce.txt
(+4 files in other folders)
